@@ -1,5 +1,5 @@
 AUX gitkraken.png 19197 BLAKE2B 2156f9c4c616888a14dd8cfbbeaf0b65285f311af60414a60770b5f5fe2fbeced42fefa83db9e364ba770d21d3f921850473b855a63020a779ce74167d5de7fb SHA512 5be7e2fcc2ae54139007cf6ff690eccc6a6c13132d3942f2446a24a7de2f1bfa9bfa43ec575677be15c5563e9d4b393fee86894b03730884b2e6d863d5dafc92
 DIST GitKraken-v7.4.1.tar.gz 112897612 BLAKE2B bd3b23478dfd1b0979ad3ca44fad0f98ac3f141cbeec97c5032cdbcbd0051998ae0887d7c8c726336bfbaaefb1e9f244186cda3a2b6517907f68e6014092bc15 SHA512 3d280fe721619002d5650861e582bddeb159b60ed0d1599c6de9735d45555afae7b1f655b5a2e2b9caad2c69d1f218fc5e95673d7d76e0e91ed495cabdd77eb4
-EBUILD gitkraken-bin-7.4.1.ebuild 1423 BLAKE2B 3b741117a3d1ab7a33ab8f3f8db1a8273ff6006129f425a059cb6b67cba9c1ee97deb870beafc749f3db4f4acd7a823e7c9746c84b30f35aa8beb4c21c592241 SHA512 e716d365e05ac81f908aebb8966dbb53e5890dc50fe3268a43a9cf958ee349007c9e6272622ab8b1360a1b4d8e5760374505395e8a7b86a5686d9412ccaf1ff4
-MISC ChangeLog 314 BLAKE2B 6493b67df2cf3b783248cffa2c0142246ce31f149e0753ffbae707d47206d8994ff05820d6ac5565a360fe140a01d5ba6637b52003174f2e4efcba0d4b8a37dc SHA512 bd2e3ec9371f97746f62381f9ca3c29867329f55f2ba84825901737e8f4072cd000b855e2ab8aa1c2e46e0ef54927863383ad8a46c51d9bb199d5b848e77934e
+EBUILD gitkraken-bin-7.4.1.ebuild 1292 BLAKE2B c298b2ef7ef7d2c9fe5f6bec02458e164e614330833d71ce3f22cf9efcc239d3fbb39a3eac5c4d8ce153d9c0b29352bb5b5fe9b09231ececf0226c6f4296044e SHA512 16dc5176378d862ddac61d4fcc131373188e03223f7aeb198bf70977be3bd4d8c89316702642e14cdd2aa16e768e722fba97c4d0440c687f27d80efe621985de
+MISC ChangeLog 372 BLAKE2B d6dc560271068a391d0fa21883af9290c3f00d1a3976a7c6ab03e91be3f3835404de5a8bfec5440bde35a50dfd65b99314eec81daf1387d017848d7b96278a30 SHA512 9b6337e2554d1d6c9c3cb5beb8839cd9477f89eea1861cb4ed22319ad2349668b7ae09062c65c210636c1757a1f5bb817eaa8fe218dc0d25301ebe0bfdf9b44b
 MISC metadata.xml 391 BLAKE2B 172b941bf5115698466a949a727db094f115230eb7b5d00df66c682c2cf1c87c72b665bb16715ca30d2a9bfea01757f4dd2bd7758789179da2928abd6405cfb6 SHA512 5b048f7cc8ec2a8a9dfda376bd6a2ff8f53cf8eb82dbbce3abab0840741911e76a6208443655795ba937b336ac64e2fdfcebf0cc424173869ebf46e2194a3f3c
